plex/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      #      securityContext:
      #  runAsUser: 1000
      #  fsGroup: 1000
      containers:
      - image: ghcr.io/linuxserver/plex
        name: plex
        ports:
        - containerPort: 32400
          protocol: TCP
        - containerPort: 3005
          protocol: TCP
        - containerPort: 8324
          protocol: TCP
        - containerPort: 32469
          protocol: TCP
        - containerPort: 1900
          protocol: TCP
        - containerPort: 1900
          protocol: UDP
        - containerPort: 32410
          protocol: UDP
        - containerPort: 32412
          protocol: UDP
        - containerPort: 32413
          protocol: UDP
        - containerPort: 32414
          protocol: UDP
        volumeMounts:
        - name: plex-config-storage
          mountPath: /config

        - name: plex-transcode-storage
          mountPath: /transcode

        - name: plex-data-storage
          mountPath: /data
      volumes:
      - name: plex-config-storage
        persistentVolumeClaim:
          claimName: plex-config-claim

      - name: plex-transcode-storage
        persistentVolumeClaim:
          claimName: plex-transcode-claim

      - name: plex-data-storage
        persistentVolumeClaim:
          claimName: plex-data-claim
