plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  type: LoadBalancer
  ports:
   - nodePort: 30172
     port: 32400
     targetPort: 32400
  selector:
    app: plex
