plex/ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plex
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer-name: ca-issuer
spec:
  tls:
  - hosts:
    - plex.ittlabb.net
    secretName: plex-cert-tls
  rules:
  - host: plex.ittlabb.net
    http:
      paths:
      - path: /
        backend:
          serviceName: plex
          servicePort: 32400
